hphp/test/zend/good/ext-standard-strings/bug45166.php
<?php
	echo substr('cd', -3) . "\n";  
?>
===DONE===