hphp/test/zend/bad/ext/zlib/tests/bug61820.php
<?php
ob_start('ob_gzhandler');

echo "Hi there.\n";
ob_flush();
flush();

echo "This is confusing...\n";
ob_flush();
flush();
?>
DONE